--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mobile-apps"]
 	path = mobile-apps
-	url = git@github.com:karoljanic/mobile-apps.git
+	url = https://github.com/karoljanic/mobile-apps
